# nomata

./: Cargo.toml  README.md
src/: autodiff.rs  lib.rs  thermodynamics.rs
src/models/: compressor.rs  cstr.rs  flash_separator.rs  heat_exchanger.rs  map.rs  mixer.rs  mod.rs  pfr.rs  pump.rs  splitter.rs  valve.rs
src/solvers/: integration.rs  mod.rs  recycle.rs
