[package]
name = "nomata"
version = "0.1.0"
edition = "2024"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
license = "MIT"
description = "Typed Process Modeling for Chemical Engineering with Compile-Time Guarantees"
readme = "README.md"
repository = "https://github.com/GermanHeim/nomata"
keywords = ["chemical-engineering", "process-modeling", "type-safety", "dsl"]
categories = ["science", "simulation"]

[lib]
name = "nomata"
path = "src/lib.rs"

[features]
default = []
autodiff = ["dep:num-dual"]
solvers = ["dep:differential-equations", "dep:nalgebra"]
thermodynamics = ["dep:rfluids"]
all = ["autodiff", "solvers", "thermodynamics"]

[dependencies]
thiserror = "2.0"
num-dual = { version = "0.13.1", optional = true }
nalgebra = { version = "0.34.1", optional = true }
differential-equations = { version = "0.5.2", optional = true }
rfluids = { version = "0.3", optional = true }
